--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculatrice</title>
-    <link rel="shortcut icon" href="">
+    <link rel="shortcut icon" href="./assets/calculatrice.png">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <section id="calculatrice">
-        <div id="ecran"></div>
-        <div id="nombres">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-        </div>
-        <div id="operateurs">
-            <button>/</button>
-            <button>X</button>
-            <button>-</button>
+    <main>
+        <section id="calculatrice">
+            <div id="ecran"></div>
+            <div id="nombres">
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+            </div>
+            <div id="operateurs">
+                <button>/</button>
+                <button>X</button>
+                <button>-</button>
             <button>+</button>
         </div>
         <div id="commandes">
