--- a/index.html
+++ b/index.html
@@ -26,13 +26,18 @@
                 <button>/</button>
                 <button>X</button>
                 <button>-</button>
-            <button>+</button>
-        </div>
-        <div id="commandes">
-            <button>0</button>
-            <button>.</button>
-            <button>AC</button>
-        </div>
-    </section>
+                <button>+</button>
+            </div>
+            <div id="commandes">
+                <button>0</button>
+                <button>.</button>
+                <button>AC</button>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>Merci à Foxland pour son icone gratuite et libre de droits</p>
+        <a href="https://www.flaticon.com/fr/icones-gratuites/calculateur" title="calculateur icônes">Calculateur icônes créées par Foxland - Flaticon</a>
+    </footer>
 </body>
 </html>
