réarangement des grid

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                 <button>9</button>
             </div>
             <div id="operateurs">
-                <button>/</button>
-                <button>X</button>
-                <button>-</button>
-                <button>+</button>
+                <button id="division">/</button>
+                <button id="multiplication">X</button>
+                <button id="soustraction">-</button>
+                <button id="addition">+</button>
             </div>
             <div id="commandes">
-                <button>0</button>
-                <button>.</button>
-                <button>AC</button>
+                <button id="zero">0</button>
+                <button id="virgule">.</button>
+                <button id="AC">AC</button>
             </div>
         </section>
     </main>
