modif sur le grid

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
     <main>
         <section id="calculatrice">
-            <div id="ecran"></div>
+            <div id="ecran">C´est l'ecran</div>
+            <div id="operateurs">
+                <button id=""division>/</button>
+                <button id="miltiplication">X</button>
+                <button id="soustraction">-</button>
+                <button id="addition">+</button>
+            </div>
             <div id="nombres">
                 <button>1</button>
                 <button>2</button>
@@ -21,12 +27,6 @@
                 <button>7</button>
                 <button>8</button>
                 <button>9</button>
-            </div>
-            <div id="operateurs">
-                <button id="division">/</button>
-                <button id="multiplication">X</button>
-                <button id="soustraction">-</button>
-                <button id="addition">+</button>
             </div>
             <div id="commandes">
                 <button id="zero">0</button>
