derniers ajouts de style

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <main>
         <section id="calculatrice">
-            <div id="ecran">C´est l'ecran</div>
+            <div id="ecran">
+                <p>000</p>
+            </div>
             <div id="operateurs">
                 <button id=""division>/</button>
                 <button id="miltiplication">X</button>
