--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <button id="soustraction">-</button>
                 <button id="addition">+</button>
             </div>
+            <div id="AC_div">
+                <button id="AC_btn">AC</button>
+            </div>
             <div id="nombres">
                 <button>1</button>
                 <button>2</button>
@@ -33,7 +36,7 @@
             <div id="commandes">
                 <button id="zero">0</button>
                 <button id="virgule">.</button>
-                <button id="AC">AC</button>
+                <button id="egal">=</button>
             </div>
         </section>
     </main>
