--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
                 <button id="soustraction">-</button>
                 <button id="addition">+</button>
             </div>
-            <div id="AC_div">
+            <div id="cmd1">
                 <button id="AC_btn">AC</button>
+                <button id="paran1">(</button>
+                <button id="paran2">)</button>
+                <button id="factorielle">!</button>
             </div>
             <div id="nombres">
                 <button>1</button>
@@ -33,7 +36,7 @@
                 <button>8</button>
                 <button>9</button>
             </div>
-            <div id="commandes">
+            <div id="cmd2">
                 <button id="zero">0</button>
                 <button id="virgule">.</button>
                 <button id="egal">=</button>
