création du script.js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Calculatrice</title>
     <link rel="shortcut icon" href="./assets/calculatrice.png">
     <link rel="stylesheet" href="./style.css">
+    <script src="./script.js"></script>
 </head>
 <body>
     <main>
