--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
                 <button id="factorielle">!</button>
             </div>
             <div id="nombres">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
+                <button id="b1">1</button>
+                <button id="b2">2</button>
+                <button id="b3">3</button>
+                <button id="b4">4</button>
+                <button id="b5">5</button>
+                <button id="b6">6</button>
+                <button id="b7">7</button>
+                <button id="b8">8</button>
+                <button id="b9">9</button>
             </div>
             <div id="cmd2">
                 <button id="zero">0</button>
