--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <section id="calculatrice">
             <div id="ecran">
-                <p>000</p>
+                <p id="p_ecran">000</p>
             </div>
             <div id="operateurs">
                 <button id=""division>/</button>
