--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Calculatrice</title>
     <link rel="shortcut icon" href="./assets/calculatrice.png">
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <main>
