--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div id="operateurs">
                 <button id="division">/</button>
-                <button id="miltiplication">X</button>
+                <button id="multiplication">X</button>
                 <button id="soustraction">-</button>
                 <button id="addition">+</button>
             </div>
