--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <button id="addition">+</button>
             </div>
             <div id="cmd1">
-                <button id="AC_btn">AC</button>
+                <button id="virgule">,</button>
                 <button id="paran1">(</button>
                 <button id="paran2">)</button>
                 <button id="factorielle">!</button>
@@ -39,7 +39,7 @@
             </div>
             <div id="cmd2">
                 <button id="zero">0</button>
-                <button id="virgule">.</button>
+                <button id="AC_button">AC</button>
                 <button id="egal">=</button>
             </div>
         </section>
