--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             </div>
             <div id="cmd2">
                 <button id="zero">0</button>
-                <button id="AC_button">AC</button>
+                <button id="del_btn">
+                    <img src="./assets/supprimer.png" alt="delete icon">
+                </button>
                 <button id="egal">=</button>
             </div>
         </section>
@@ -47,6 +49,9 @@
     <footer>
         <p>Merci à Foxland pour son icone gratuite et libre de droits</p>
         <a href="https://www.flaticon.com/fr/icones-gratuites/calculateur" title="calculateur icônes">Calculateur icônes créées par Foxland - Flaticon</a>
+        <br>
+        <p>Nerci à Pixel perfect pour son icone gratuite et libre de droits</p>
+        <a href="https://www.flaticon.com/fr/icones-gratuites/effacer" title="effacer icones">Effacer icones crées par Pixel perfect - Flaticon</a>"
     </footer>
 </body>
 </html>
