--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div id="cmd2">
                 <button id="zero">0</button>
                 <button id="del_btn">
-                    <img src="./assets/supprimer.png" alt="delete icon">
+                    <img src="./assets/supprimer.png" alt="delete icon" class="img">
                 </button>
                 <button id="egal">=</button>
             </div>
