--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
             </div>
         </section>
     </main>
-    <footer>
-        <p>Merci à Foxland pour son icone gratuite et libre de droits</p>
-        <a href="https://www.flaticon.com/fr/icones-gratuites/calculateur" title="calculateur icônes">Calculateur icônes créées par Foxland - Flaticon</a>
+    <footer class="footer">
+        <p class="inFooter">Merci à Foxland pour son icone gratuite et libre de droits</p>
+        <a href="https://www.flaticon.com/fr/icones-gratuites/calculateur" title="calculateur icônes" class="inFooter">Calculateur icônes créées par Foxland - Flaticon</a>
         <br>
-        <p>Nerci à Pixel perfect pour son icone gratuite et libre de droits</p>
-        <a href="https://www.flaticon.com/fr/icones-gratuites/effacer" title="effacer icones">Effacer icones crées par Pixel perfect - Flaticon</a>"
+        <p class="inFooter">Nerci à Pixel perfect pour son icone gratuite et libre de droits</p>
+        <a href="https://www.flaticon.com/fr/icones-gratuites/effacer" title="effacer icones" class="inFooter">Effacer icones crées par Pixel perfect - Flaticon</a>"
     </footer>
 </body>
 </html>
